--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>FlightTracker|Home</title>
   </head>
   <body>
-    <h1>Howzit fellas</h1>
+    <div class="container">
+      <nav>
+        <img id="logo" alt="flight_tracker_logo" />
+      </nav>
+      <main>
+        <button id="find-flights-btn">Find Flight</button>
+      </main>
+      <footer>Footer</footer>
+    </div>
   </body>
 </html>
