changed copyright in footer

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
       </main>
       <footer>
         <div class="copyright-text">
-          <span>&copy; leafletjs.com | &copy; opensky.com</span>
+          <span>&copy; MUSA MSOMI 2023</span>
         </div>
       </footer>
     </div>
