renamed flights table header

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
               <table id="flights">
                 <thead>
                   <tr>
-                    <th>Flights</th>
+                    <th>Ongoing Flights</th>
                   </tr>
                 </thead>
                 <tbody id="flights-tbody">
