feat: :sparkles: added search input field

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
               <img id="pikachu-gif" alt="Gif image of Pikachu runnning" />
             </div>
             <div id="flights-table">
+              <input type="text" id="search-input" placeholder="Enter Flight Number" />
               <table id="flights">
                 <thead>
                   <tr>
