--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,6 @@
       integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
       crossorigin=""
     />
-    <script
-      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-      crossorigin=""
-    ></script>
     <title>FlightTracker|Home</title>
   </head>
   <body>
@@ -33,7 +28,11 @@
               <img id="pikachu-gif" alt="Gif image of Pikachu runnning" />
             </div>
             <div id="flights-table">
-              <input type="text" id="search-input" placeholder="Enter Flight Number" />
+              <input
+                type="text"
+                id="search-input"
+                placeholder="Enter Flight Number"
+              />
               <table id="flights">
                 <thead>
                   <tr>
