feat: :construction: used tailwind to style search input field

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <title>FlightTracker|Home</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container ">
       <nav>
         <a href="#"><img id="logo" alt="flight_tracker_logo" /></a>
       </nav>
@@ -32,6 +32,7 @@
                 type="text"
                 id="search-input"
                 placeholder="Enter Flight Number"
+                class="p-2 bg-white rounded focus:outline-none focus:ring focus:border-blue-300"
               />
               <table id="flights">
                 <thead>
